deploy/rollouts/canary/rollout.yml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: nextjs-example-rollout-canary
spec:
  replicas: 5
  strategy:
    canary:
      steps:
      - setWeight: 10
      - pause: {}
      - setWeight: 40
      - pause: {}
      - setWeight: 80
      - pause: {}
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: nextjs-example-rollout-canary
  template:
    metadata:
      labels:
        app: nextjs-example-rollout-canary
    spec:
      containers:
        - name: nextjs-example-rollout-canary
          image: nextjs-example-rollout-canary-image
          # envFrom:
          #   - configMapRef:
          #       name: nextjs-example-configmap
